migrate pq to pgx/v5

--- a/server/myrdb/sqlc.yaml
+++ b/server/myrdb/sqlc.yaml
@@ -6,11 +6,23 @@ sql:
     gen:
       go:
         package: "sqlcgen"
+        sql_package: "pgx/v5"
         out: "./sqlcgen"
+        overrides:
+          - go_type: "github.com/google/uuid.UUID"
+            db_type: "uuid"
+          - go_type: "time.Time"
+            db_type: "pg_catalog.timestamptz"
   - engine: "postgresql"
     queries: "./queries_for_test"
     schema: "./schema.sql"
     gen:
       go:
         package: "sqlctest"
+        sql_package: "pgx/v5"
         out: "./rdbtest/sqlctest"
+        overrides:
+          - go_type: "github.com/google/uuid.UUID"
+            db_type: "uuid"
+          - go_type: "time.Time"
+            db_type: "pg_catalog.timestamptz"
