--- a/server/myrdb/sqlc.yaml
+++ b/server/myrdb/sqlc.yaml
@@ -8,6 +8,7 @@ sql:
         package: "sqlcgen"
         sql_package: "pgx/v5"
         out: "./sqlcgen"
+        emit_pointers_for_null_types: true
         overrides:
           - go_type: "github.com/google/uuid.UUID"
             db_type: "uuid"
@@ -21,6 +22,7 @@ sql:
         package: "sqlctest"
         sql_package: "pgx/v5"
         out: "./rdbtest/sqlctest"
+        emit_pointers_for_null_types: true
         overrides:
           - go_type: "github.com/google/uuid.UUID"
             db_type: "uuid"
