--- a/server/myrdb/sqlc.yaml
+++ b/server/myrdb/sqlc.yaml
@@ -9,6 +9,7 @@ sql:
         sql_package: "pgx/v5"
         out: "./sqlcgen"
         emit_pointers_for_null_types: true
+        emit_methods_with_db_argument: true
         overrides:
           - go_type: "github.com/google/uuid.UUID"
             db_type: "uuid"
@@ -23,6 +24,7 @@ sql:
         sql_package: "pgx/v5"
         out: "./rdbtest/sqlctest"
         emit_pointers_for_null_types: true
+        emit_methods_with_db_argument: true
         overrides:
           - go_type: "github.com/google/uuid.UUID"
             db_type: "uuid"
